# ppp

./: .clang-format  .cmake-lint  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  exmaple.cc  lib.cc  lib.h  test.cc  test1.cc
src/kypy/: CMakeLists.txt  any.cc  any_impl.h  impl.h  len.cc  lib.cc  list.cc  list_impl.h  sequence.cc  sequence_impl.cc  sequence_impl.h  str.cc  string.cc  test1.cc  var.cc  var_impl.h
src/kypy/include/: any.h  exception.h  len.h  lib.h  list.h  sequence.h  str.h  string.h  var.h
src/nastl/: CMakeLists.txt  any.cc  file.cc  impl.h  iterable.cc  iterator_impl.h  list.cc  object.cc  sequence.cc  string.cc  string_from_any.cc  string_impl.h  string_iter.cc  string_lib.cc  to_std_string.cc  to_std_string.h  todo.md  variant.h  visitor.cc  visitor.h
src/nastl/examples/: CMakeLists.txt  example.cc  example1.cc
src/nastl/include/: any.h  exception.h  file.h  iterable.h  list.h  nastl.h  object.h  sequence.h  string.h  types.h
src/nastl/test/: CMakeLists.txt  test1.cc
src/ppp/: CMakeLists.txt  eq.cc  len.cc  ppp.cc  str.cc  visitor.cc  visitor.h
src/ppp/include/: eq.h  len.h  list.h  list_slice.h  ppp.h  ppp_base.h  str.h  var.h
